[gd_scene load_steps=13 format=1]

[ext_resource path="res://UI/ControlBar/ControlBar.gd" type="Script" id=1]
[ext_resource path="res://Assets/Backgrounds/combat_ui_bottom_bar.png" type="Texture" id=2]
[ext_resource path="res://UI/Runes.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/FinalHeroScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/ControlBar/StarBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/ControlBar/EndTurnButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/UI/new_deploy_button.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/new_deploy_button_pressed.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/new_deploy_button_light.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/new_deploy_button_grey.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/back_arrow.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/right_arrow.png" type="Texture" id=12]

[node name="ControlBar" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

visibility/blend_mode = 1
transform/pos = Vector2( 334, 80 )
texture = ExtResource( 2 )

[node name="Runes" parent="." instance=ExtResource( 3 )]

visibility/opacity = 0.7
transform/pos = Vector2( 325, 22 )

[node name="FinalHeroScreen" parent="." instance=ExtResource( 4 )]

visibility/visible = true
transform/pos = Vector2( 30, -64 )

[node name="Combat" type="Node2D" parent="."]

[node name="StarBar" parent="Combat" instance=ExtResource( 5 )]

transform/pos = Vector2( 10.9793, 21 )

[node name="EndTurnButton" parent="Combat" instance=ExtResource( 6 )]

visibility/visible = false
transform/pos = Vector2( 248, 5 )

[node name="DeployButton" type="TextureButton" parent="Combat"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 248.0
margin/top = 5.0
margin/right = 423.0
margin/bottom = 125.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
textures/hover = ExtResource( 9 )
textures/disabled = ExtResource( 10 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="BackButton" type="TextureButton" parent="Combat"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -2.0
margin/top = -112.0
margin/right = 118.0
margin/bottom = -7.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="ForwardButton" type="TextureButton" parent="Combat"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 555.0
margin/top = -112.0
margin/right = 675.0
margin/bottom = -7.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 12 )
params/resize_mode = 0
params/stretch_mode = 0


